# Chatgpt-test-bevy-game

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  Trunk.toml  build.rs  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/sprites/: README.md
examples/: headless.rs
src/: lib.rs  main.rs
src/components/: mod.rs
src/plugins/: mod.rs
src/resources/: mod.rs
src/systems/: input.rs  mod.rs  movement.rs
