[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"
description = "A 2D Bevy game example"
authors = ["Your Name <your.email@example.com>"]

# Base dependencies for all targets
[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_render", 
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "png",
] }

# Desktop-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.14", default-features = false, features = ["x11"] }

# Web-specific dependencies  
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
bevy = { version = "0.14", default-features = false, features = ["webgl2"] }
# Use getrandom 0.3 with proper WASM support
getrandom = { version = "0.3", features = ["wasm_js"] }

# Fast compiles for development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Better runtime performance for release builds
[profile.release]
lto = true
codegen-units = 1
