[package]
name = "bevy_web_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_scene",
    "webgl2",
    "x11",
    "wayland"
] }
